2014-03-21  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-smie-rules):
	Add indentation rule for ` @ '.  (Bug#17050)

2014-03-21  Juanma Barranquero  <lekktu@gmail.com>

	* align.el (align-regexp): Remove superfluous backslash.

	* ffap.el (ffap-ftp-default-user, ffap-url-regexp)
	(ffap-pass-wildcards-to-dired, dired-at-point-require-prefix)
	(ffap-rfc-path, ffap-ftp-sans-slash-regexp, ffap-menu-regexp):
	Fix docstring typos.
	(ffap-next): Use C-u in docstring.
	(ffap-machine-p, ffap-list-env, ffap-alist, ffap-alist)
	(ffap-string-at-point-mode-alist, ffap-menu, ffap-menu-ask):
	Remove superfluous backslashes.
	(ffap-string-at-point): Reflow docstring.

	* server.el (server-host): Reflow docstring.
	(server-unload-function): Fix docstring typo.
	(server-eval-at): Remove superfluous backslash.

	* skeleton.el (skeleton-insert): Remove superfluous backslash.
	(skeleton-insert): Doc fix.
	(skeleton-insert): Reflow docstring.

	* term/tty-colors.el (tty-color-alist, tty-modify-color-alist)
	(tty-color-approximate, tty-color-by-index, tty-color-values)
	(tty-color-desc): Remove superfluous backslashes.

2014-03-20  Stefan Monnier  <monnier@iro.umontreal.ca>

	* electric.el (electric-newline-and-maybe-indent): New command.
	Bind it globally to C-j.
	(electric-indent-mode): Don't mess with the global map any more.
	Don't drop the post-self-insert-hook is some buffer is still using it
	(bug#16770).
	* bindings.el (global-map): Remove C-j binding.

	* emacs-lisp/nadvice.el (advice--make-docstring): Try harder to find
	the docstring of functions advised before dumping (bug#16993).

2014-03-19  Stefan-W. Hahn  <stefan.hahn@s-hahn.de>  (tiny change)

	* ps-print.el (ps-generate-postscript-with-faces):
	Explicitly deactivate the mark (bug#16866).
	* simple.el (deactivate-mark): Update region highlight.

2014-03-19  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/package.el (describe-package-1):
	Decode commentary (bug#16733).
